# nexus-erp

./: .env.example  .gitignore  Dockerfile.api  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
backend/: main.py
backend/agent/: graph.py  state.py
backend/agent/nodes/: code_generator.py  code_validator.py  drift_detector.py  healer.py  human_checkpoint.py  mapping_proposer.py
backend/agent/prompts/: __init__.py
backend/api/: dependencies.py
backend/api/v1/: agent.py  connectors.py  health.py  mappings.py  pipelines.py  schemas.py  sync_events.py
backend/connectors/: base.py  registry.py
backend/connectors/dynamics365/: connector.py
backend/connectors/netsuite/: connector.py
backend/connectors/oracle_erp/: connector.py
backend/connectors/sage_intacct/: auth.py  client.py  connector.py  schema_adapter.py
backend/connectors/sap_s4hana/: connector.py
backend/core/: config.py  database.py  logging.py  security.py
backend/db/: models.py
backend/llm/: __init__.py  nam_client.py  nnlm_client.py  schema_indexer.py
backend/messaging/: consumer.py  producer.py  topics.py
backend/pipeline/: conflict.py  poller.py  runner.py
backend/schema_registry/: differ.py  service.py
backend/transformation/: compiler.py  sandbox.py  validator.py
backend/workers/: agent_tasks.py  celery_app.py  sync_tasks.py
ui/: Dockerfile.ui  mix.exs
ui/assets/: tailwind.config.js
ui/assets/js/: app.js
ui/config/: config.exs  dev.exs  prod.exs  runtime.exs
ui/lib/: nexus_ui_web.ex
(+24 files in other folders)
