[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-erp"
version = "0.1.0"
description = "Pluggable bidirectional ERP integration platform with agentic schema mapping"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Database
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",

    # Caching
    "redis>=5.0.4",

    # Messaging
    "aiokafka>=0.11.0",

    # HTTP clients
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",

    # Task queue
    "celery>=5.4.0",
    "celery[redis]>=5.4.0",
    "apscheduler>=3.10.0",

    # Agentic / LLM
    "langchain>=0.2.0",
    "langchain-anthropic>=0.1.15",
    "langgraph>=0.1.0",

    # Transformation sandboxing
    "RestrictedPython>=7.1",

    # Encryption
    "cryptography>=42.0.0",

    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.2.0",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
